--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,10 @@ h1,h2,h3,h4,h5,h6,p {
 
 .header-company-name1 {
     color: #2196F3;
+    margin-right: 93px;
 }
 
 .header-company-name2 {
-    margin-right: 93px;
     color: black;
 }
 
@@ -149,8 +149,8 @@ h1,h2,h3,h4,h5,h6,p {
     cursor: pointer;
 }
 
-.header-contacts:hover,
-.header-contacts:focus {
+.header-contacts:hover .header-contact-logo,
+.header-contacts:focus .header-contact-logo{
     fill: #2196F3;
 }
 /* ----------------------------------------------------------------------------------------Work----------------------------------------------------------------------------------------------- */
@@ -165,28 +165,22 @@ h1,h2,h3,h4,h5,h6,p {
     color: #FFFFFF;
 }
 
-.specialisation-soc-list {
-    display: flex;
-}
+/*----------------------------------------*/
 
-.specialisation-soc-item {
+.specialisation-soc-container {
     background: #F5F4FA;
     border-radius: 4px;
     margin-right: 30px;
-    margin-bottom: 30px;
     width: 270px;
     height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
-.specialisation-soc-item:last-child {
-    margin: 0;
-}
-
-.specialisation-soc-logo {
-}
-
-.specialisation-soc-container {
-    padding: 25px 100px;
+.specialisation-soc-container:last-child {
+    margin-right: 0;
 }
 
 .specialisation-section {
