--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,8 @@ h1,h2,h3,h4,h5,h6,p {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /*max-width: 1600px;*/
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 .team-section {
